--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    
         <title>IodineGBA</title>
         <meta charset="UTF-8">
         <!--Required Scripts-->
@@ -65,7 +69,7 @@
             <canvas id="emulator_target" width="240" height="160"></canvas>
         </div>
         <span id="tempMessage">...</span>
-        <div id="control_panel">
+        <div id="control_panel" style="display: none">
             <div id="load_panel">
                 <form>
                     <fieldset>
